--- a/frontend/src/app/features/pages/chat/chat/chat.component.html
+++ b/frontend/src/app/features/pages/chat/chat/chat.component.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <!-- Body -->
-                    <div class="bg-gray-100 flex items-center justify-between h-20 px-5">
+                    <div class="bg-gray-100 flex items-center rounded-b-lg justify-between h-20 px-5">
                         <div class="flex items-center ml-1">
                             <button
                                 class="flex justify-between items-center w-11 h-11 rounded-full hover:bg-gray-200 duration-200 transition-all">
