--- a/frontend/src/app/features/pages/contact/members-list/members-list.component.html
+++ b/frontend/src/app/features/pages/contact/members-list/members-list.component.html
@@ -1,1 +1,56 @@
-<p>members-list works!</p>
+<div class="mx-4 mb-4">
+    <app-card>
+        <div>
+            <div class="flex justify-between items-center mb-4">
+                <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">Users List</h4>
+                <c-button>
+                    <i class="pi pi-plus text-xs mr-2"></i>
+                    <span class="text-sm">Create New User</span>
+                </c-button>
+            </div>
+            <div class="mt-2">
+                <p-table [value]="users" [paginator]="true" [rows]="15" [tableStyle]="{ 'min-width': '50rem' }"
+                [rowsPerPageOptions]="[15, 30, 45]" styleClass="p-datatable-striped"
+                [tableStyle]="{'min-width': '50rem'}">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th class="text-left">User</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-user>
+                    <tr>
+                        <td class="">
+                            <div class="flex items-center">
+                                <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
+                                <img class="w-[45px] h-[45px] mx-4 rounded-full"
+                                    [src]="'/assets/images/avatars/'+user.avatar" [alt]="user.avatar">
+                                <div>
+                                    <p class="font-headingFontFamily text-primary-900 text-base font-semibold">
+                                        {{user.name}}
+                                    </p>
+                                    <p class="text-gray-400 text-[15px] text-left">{{user.username}}</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>{{user.email}}</td>
+                        <td>{{user.role}}</td>
+                        <td>
+                            <span class="tag" [ngClass]="getStatusClass(user.status)">
+                                {{user.status}}
+                            </span>
+                        </td>
+                        <td>
+                            <c-button icon="pi-ellipsis-h" (click)="menu.toggle($event)"></c-button>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            </div>
+            <p-tieredMenu #menu [model]="items" [popup]="true"></p-tieredMenu>
+        </div>
+    </app-card>
+</div>
