Complete member profile

--- a/frontend/src/app/features/pages/todo-list/todo-list/todo-list.component.html
+++ b/frontend/src/app/features/pages/todo-list/todo-list/todo-list.component.html
@@ -30,7 +30,7 @@
                                     <div class="flex justify-start items-center">
                                         <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
                                         <a
-                                            class="font-semibold font-headingFontFamily ml-2 hover:text-primary-900 duration-200 transition-all text-sm">
+                                            class="font-semibold font-headingFontFamily ml-2 hover:text-primary-900 duration-200 transition-all text-base">
                                             {{task.name}}
                                         </a>
                                     </div>
