--- a/frontend/src/app/features/pages/contact/member-profile/member-profile.component.html
+++ b/frontend/src/app/features/pages/contact/member-profile/member-profile.component.html
@@ -1,1 +1,44 @@
-<p>member-profile works!</p>
+<div class="mx-4 pb-4 mb-4">
+    <div class="grid grid-cols-12 gap-4 mb-4">
+        <div class="col-span-12 xl:col-span-4">
+            <div class="grid grid-cols-12 gap-4 mb-4">
+                <div class="col-span-12 xl:col-span-12">
+                    <app-card bg="bg-primary-500">
+                        <div class="flex justify-between items-end">
+                            <div>
+                                <h2 class="text-white text-xl font-bold font-headingFontFamily mb-4">Welcome to hbsoft
+                                    Dashboard !</h2>
+                                <p class="text-white text-[15px]">You have done 68% 😎 more sales today. Check your new
+                                    badge in your profile.</p>
+                            </div>
+                            <div class="ml-4">
+                                <img class="w-40" src="/assets/images/shape.png" alt="shape">
+                            </div>
+                        </div>
+                    </app-card>
+                </div>
+                <div class="col-span-12 xl:col-span-12">
+                    <app-personal-information></app-personal-information>
+                </div>
+                <div class="col-span-12 xl:col-span-12">
+                    <app-activity-timeline></app-activity-timeline>
+                </div>
+            </div>
+        </div>
+        <div class="col-span-12 xl:col-span-8">
+            <div class="grid grid-cols-12 gap-4 mb-4">
+                <div class="col-span-12 xl:col-span-4" *ngFor="let item of data; let i = index">
+                    <app-state [value]="item.value" [icon]="item.icon" [title]="item.title"></app-state>
+                </div>
+            </div>
+            <div class="grid grid-cols-12 gap-4 mb-4">
+                <div class="col-span-12 xl:col-span-12">
+                    <app-overview></app-overview>
+                </div>
+                <div class="col-span-12 xl:col-span-12">
+                    <app-my-tasks></app-my-tasks>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
