--- a/frontend/src/app/shared/components/card/card.component.html
+++ b/frontend/src/app/shared/components/card/card.component.html
@@ -1,3 +1,3 @@
-<div class="w-full rounded-lg bg-white shadow-sm hover:shadow-md transition duration-200" [ngClass]="padding">
-    <ng-content></ng-content> 
+<div class="w-full rounded-lg shadow-sm hover:shadow-md transition duration-200" [ngClass]="padding + ' ' + bg">
+    <ng-content></ng-content>
 </div>
