--- a/frontend/src/app/features/pages/invoice/invoice-detail/invoice-detail.component.html
+++ b/frontend/src/app/features/pages/invoice/invoice-detail/invoice-detail.component.html
@@ -1,1 +1,118 @@
-<p>invoice-detail works!</p>
+<div class="mx-4 mb-4">
+    <app-card>
+        <div>
+            <div class="flex justify-between items-center mb-4 border-b pb-4 border-gray-100">
+                <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">Invoice Details</h4>
+                <h4 class="text-primary-900 font-headingFontFamily font-bold text-lg">Invoice <span
+                        class="font-fontFamily">#4987</span></h4>
+            </div>
+            <div class="mt-2">
+                <div class="flex justify-between">
+                    <div>
+                        <div class="mb-6 text-primary-700 text-[15px]">
+                            <h4 class="mb-2 font-bold font-headingFontFamily text-lg text-primary-900">Billed To :</h4>
+                            <h5 class="mb-1 font-semibold">Thomas Adison</h5>
+                            <p class="mb-1">32104 Main</p>
+                            <p class="mb-1">Apt. 4c</p>
+                            <p class="mb-1">Springfield ST 54321</p>
+                        </div>
+                        <div class="mb-6 text-primary-700 text-[15px]">
+                            <h4 class="mb-2 font-bold font-headingFontFamily text-lg text-primary-900">Payment :</h4>
+                            <div class="flex mb-1">
+                                <p class="mr-2">Total Due:</p>
+                                <p>$12,110.55</p>
+                            </div>
+                            <div class="flex mb-1">
+                                <p class="mr-2">Bank name:</p>
+                                <p>American Bank</p>
+                            </div>
+                            <div class="flex mb-1">
+                                <p class="mr-2">Country</p>
+                                <p>United States</p>
+                            </div>
+                            <div class="flex mb-1">
+                                <p class="mr-2">IBAN:</p>
+                                <p>ETD95476213874685</p>
+                            </div>
+                            <div class="flex mb-1">
+                                <p class="mr-2">SWIFT code:</p>
+                                <p>BR91905</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-right">
+                        <div class="mb-6 text-primary-700 text-[15px]">
+                            <h4 class="mb-2 font-bold font-headingFontFamily text-lg text-primary-900">Shipped To :</h4>
+                            <h5 class="mb-1 font-semibold">Thomas Adison</h5>
+                            <p class="mb-1">32104 Main</p>
+                            <p class="mb-1">Apt. 4c</p>
+                            <p class="mb-1">Springfield ST 54321</p>
+                        </div>
+                        <div class="mb-6 text-primary-700 text-[15px]">
+                            <h4 class="mb-2 font-bold font-headingFontFamily text-lg text-primary-900">Order Date :</h4>
+                            <h5 class="mb-1">March 14, 2023</h5>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="font-headingFontFamily text-[22px] text-primary-900 font-bold mb-2">Order Summary</h3>
+                    <div>
+                        <p-table [value]="products" [paginator]="false" [tableStyle]="{ 'min-width': '50rem' }"
+                            styleClass="p-datatable-striped custom-table" [tableStyle]="{'min-width': '50rem'}">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th>No</th>
+                                    <th class="text-left">Item</th>
+                                    <th>Quantity</th>
+                                    <th>Unit Price</th>
+                                    <th class="text-right">Price</th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-product>
+                                <tr>
+                                    <td class="text-sm font-semibold">
+                                        <span class="text-primary-500">{{product.id}}</span>
+                                    </td>
+                                    <td>
+                                        <div class="flex justify-start items-center">
+                                            <img [src]="'/assets/images/products/' + product.image"
+                                                [alt]="product.product" class="w-12 rounded-xl mr-2" />
+                                            <a routerLink="/"
+                                                class="font-semibold font-headingFontFamily hover:text-primary-900 duration-200 transition-all text-sm">
+                                                {{product.product}}
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td>{{product.quantity}}</td>
+                                    <td>{{product.unitPrice}}</td>
+                                    <td>
+                                        <div class="text-right">{{product.price}}</div>
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                        <div class="mt-5 text-primary-900">
+                            <div class="flex justify-end font-semibold mb-4 border-b pb-5 border-gray-100">
+                                <p>Subtotal:</p>
+                                <p class="ml-8 font-fontFamily min-w-36 text-right">$4000.00</p>
+                            </div>
+                            <div class="flex justify-end font-semibold mb-4 border-b pb-5 border-gray-100">
+                                <p>Vat Rate:</p>
+                                <p class="ml-8 font-fontFamily min-w-36 text-right">$0.00</p>
+                            </div>
+                            <div class="flex justify-end font-semibold mb-4 border-b pb-5 border-gray-100">
+                                <p>Shipping:</p>
+                                <p class="ml-8 font-fontFamily min-w-36 text-right">$0.00</p>
+                            </div>
+                            <div class="flex justify-end font-semibold mb-4">
+                                <h4 class="mb-2 font-bold font-headingFontFamily text-lg text-primary-900">Total
+                                    :</h4>
+                                <h4 class="mb-2 font-bold font-fontFamily text-lg text-primary-900 ml-8 min-w-36 text-right">$4000.00</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </app-card>
+</div>
